Hoàn thành Blog Page

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <!-- Style -->
         <link rel="stylesheet" href="./assets/css/style.css" />
-        <link rel="stylesheet" href="./assets/css/style_blog.css">
+        <link rel="stylesheet" href="./assets/css/style_blog.css" />
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,7 +19,7 @@
         />
     </head>
     <body>
-        <!-- ========================================Blog Page================================================ -->
+        <!-- ===================================Blog Page========================================= -->
         <!-- Header -->
         <header class="fixed header">
             <div class="main-content">
@@ -80,7 +80,11 @@
                             </div>
                             <p class="title-trending">A guide to Thai Curry</p>
                             <div class="container">
-                                <img src="./assets/img/avt-featured.png" alt="avt-featured" class="avt">
+                                <img
+                                    src="./assets/img/avt-featured.png"
+                                    alt="avt-featured"
+                                    class="avt"
+                                />
                                 <div class="info">
                                     <p class="name desc">Andrew Jonson</p>
                                     <p class="date">27th January 2021</p>
@@ -100,29 +104,242 @@
                             <div class="item-list">
                                 <!-- item 1 -->
                                 <div class="item">
-                                    <img src="./assets/img/Image-featured-2.png" alt="" class="thumb">
+                                    <img
+                                        src="./assets/img/Image-featured-2.png"
+                                        alt=""
+                                        class="thumb"
+                                    />
                                     <div class="details">
-                                        <h4 class="heading lv4">You can move the text by dragging and dropping the text </h4>
-                                        <p class="desc">Writing UX copies can be a little frustrating and confusing, and sometimes </p>
+                                        <h4 class="heading lv4">
+                                            You can move the text by dragging
+                                            and dropping the text
+                                        </h4>
+                                        <p class="desc">
+                                            Writing UX copies can be a little
+                                            frustrating and confusing, and
+                                            sometimes
+                                        </p>
                                     </div>
                                 </div>
                                 <!-- item 2 -->
                                 <div class="item">
-                                    <img src="./assets/img/Image-featured-3.png" alt="" class="thumb">
+                                    <img
+                                        src="./assets/img/Image-featured-3.png"
+                                        alt=""
+                                        class="thumb"
+                                    />
                                     <div class="details">
-                                        <h4 class="heading lv4">Edit this text to make it your own. To edit, simply </h4>
-                                        <p class="desc">Writing UX copies can be a little frustrating and confusing, and sometimes </p>
+                                        <h4 class="heading lv4">
+                                            Edit this text to make it your own.
+                                            To edit, simply
+                                        </h4>
+                                        <p class="desc">
+                                            Writing UX copies can be a little
+                                            frustrating and confusing, and
+                                            sometimes
+                                        </p>
                                     </div>
                                 </div>
                                 <!-- item 3 -->
                                 <div class="item">
-                                    <img src="./assets/img/Image-featured-4.png" alt="" class="thumb">
+                                    <img
+                                        src="./assets/img/Image-featured-4.png"
+                                        alt=""
+                                        class="thumb"
+                                    />
                                     <div class="details">
-                                        <h4 class="heading lv4">You can move the text by dragging and dropping the text </h4>
-                                        <p class="desc">Writing UX copies can be a little frustrating and confusing, and sometimes </p>
+                                        <h4 class="heading lv4">
+                                            You can move the text by dragging
+                                            and dropping the text
+                                        </h4>
+                                        <p class="desc">
+                                            Writing UX copies can be a little
+                                            frustrating and confusing, and
+                                            sometimes
+                                        </p>
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- All Articles -->
+            <div class="articles">
+                <div class="main-content">
+                    <h2 class="title">All Articles</h2>
+                    <div class="item-list">
+                        <!-- item 1 -->
+                        <div class="item">
+                            <img
+                                src="./assets/img/Image-Articles-1.png"
+                                alt=""
+                                class="thumb"
+                            />
+                            <div class="container">
+                                <div class="containerlv2">
+                                    <img
+                                        src="./assets/img/avt-featured.png"
+                                        alt="avt-featured"
+                                        class="avt"
+                                    />
+                                    <div class="info">
+                                        <p class="name desc">Andrew Jonson</p>
+                                        <p class="date">27th January 2021</p>
+                                    </div>
+                                </div>
+                                <h4 class="heading lv4">
+                                    A guide to Thai Curry
+                                </h4>
+                                <button class="action">
+                                    <span class="desc">Read More</span>
+                                    <img
+                                        src="./assets/img/arrow-to-right-longer.svg"
+                                        alt="arrow-to-right"
+                                        class="arrow-to-right"
+                                    />
+                                </button>
+                            </div>
+                        </div>
+                        <!-- item 2 -->
+                        <div class="item">
+                            <img
+                                src="./assets/img/Image-Articles-2.png"
+                                alt=""
+                                class="thumb"
+                            />
+                            <div class="container">
+                                <div class="containerlv2">
+                                    <img
+                                        src="./assets/img/avt-featured.png"
+                                        alt="avt-featured"
+                                        class="avt"
+                                    />
+                                    <div class="info">
+                                        <p class="name desc">Andrew Jonson</p>
+                                        <p class="date">27th January 2021</p>
+                                    </div>
+                                </div>
+                                <h4 class="heading lv4">
+                                    The best guacamole recipe with only 4
+                                    ingredients
+                                </h4>
+                                <button class="action">
+                                    <span class="desc">Read More</span>
+                                    <img
+                                        src="./assets/img/arrow-to-right-longer.svg"
+                                        alt="arrow-to-right"
+                                        class="arrow-to-right"
+                                    />
+                                </button>
+                            </div>
+                        </div>
+                        <!-- item 3 -->
+                        <div class="item">
+                            <img
+                                src="./assets/img/Image-Articles-3.png"
+                                alt=""
+                                class="thumb"
+                            />
+                            <div class="container">
+                                <div class="containerlv2">
+                                    <img
+                                        src="./assets/img/avt-featured.png"
+                                        alt="avt-featured"
+                                        class="avt"
+                                    />
+                                    <div class="info">
+                                        <p class="name desc">Andrew Jonson</p>
+                                        <p class="date">27th January 2021</p>
+                                    </div>
+                                </div>
+                                <h4 class="heading lv4">
+                                    THow to store Tomatoes (and Whether to
+                                    Refrigerate Them)
+                                </h4>
+                                <button class="action">
+                                    <span class="desc">Read More</span>
+                                    <img
+                                        src="./assets/img/arrow-to-right-longer.svg"
+                                        alt="arrow-to-right"
+                                        class="arrow-to-right"
+                                    />
+                                </button>
+                            </div>
+                        </div>
+                        <!-- item 4 -->
+                        <div class="item">
+                            <img
+                                src="./assets/img/Image-Articles-4.png"
+                                alt=""
+                                class="thumb"
+                            />
+                            <div class="container">
+                                <div class="containerlv2">
+                                    <img
+                                        src="./assets/img/avt-featured.png"
+                                        alt="avt-featured"
+                                        class="avt"
+                                    />
+                                    <div class="info">
+                                        <p class="name desc">Andrew Jonson</p>
+                                        <p class="date">27th January 2021</p>
+                                    </div>
+                                </div>
+                                <h4 class="heading lv4">
+                                    The Absolute Best Way to Cook French Fries
+                                </h4>
+                                <button class="action">
+                                    <span class="desc">Read More</span>
+                                    <img
+                                        src="./assets/img/arrow-to-right-longer.svg"
+                                        alt="arrow-to-right"
+                                        class="arrow-to-right"
+                                    />
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Contact -->
+            <div class="contact">
+                <div class="main-content">
+                    <div class="body">
+                        <div class="info">
+                            <div class="container">
+                                <!-- item 1 -->
+                                <div class="item">
+                                    <h4 class="heading lv4">Working Hour</h4>
+                                    <p class="desc">
+                                        Sunday to Saturday 09:00 AM to 11:00 PM
+                                    </p>
+                                </div>
+                                <!-- item 2 -->
+                                <div class="item">
+                                    <h4 class="heading lv4">Location</h4>
+                                    <p class="desc">
+                                        Street - 127, New York, United States 546544
+                                    </p>
+                                </div>
+                                <!-- item 3 -->
+                                <div class="item">
+                                    <h4 class="heading lv4">Contact us</h4>
+                                    <a href="tel:+123456789" class="desc"
+                                        ><p>+123456789</p></a
+                                    >
+                                    <a href="mailto:hey@yourdomain.com" class="desc"
+                                        ><p>hey@yourdomain.com</p></a
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                        <div class="map">
+                            <img
+                                src="./assets/img/Imgae-Contact-map.png"
+                                alt="map"
+                                class="img-map"
+                            />
                         </div>
                     </div>
                 </div>
